@startuml

title __TASK4's Class Diagram__\n

  namespace sample {
    class sample.Controller {
    }
  }
  

  namespace sample {
    class sample.Main {
    }
  }
  

  namespace sample {
    namespace Methods {
      class sample.Methods.DataArea {
      }
    }
  }
  

  namespace sample {
    namespace Methods {
      class sample.Methods.Library {
      }
    }
  }
  

  namespace sample {
    namespace Methods {
      class sample.Methods.Modulus {
      }
    }
  }
  

  namespace sample {
    namespace Methods {
      abstract class sample.Methods.Shape {
      }
    }
  }
  

  namespace sample {
    namespace Methods {
      class sample.Methods.Subsystem {
      }
    }
  }
  

  sample.Controller .up.|> javafx.fxml.Initializable
  sample.Main -up-|> javafx.application.Application
  sample.Methods.DataArea -up-|> sample.Methods.Shape
  sample.Methods.Library -up-|> sample.Methods.Shape
  sample.Methods.Modulus -up-|> sample.Methods.Shape
  sample.Methods.Shape .up.|> java.lang.Cloneable
  sample.Methods.Subsystem -up-|> sample.Methods.Shape


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
